@@ -3,7 +3,7 @@
 name=Domination
 
 # comes from the manifest on Android
-version=1.1.1.0
+version=1.1.1.1
 
 defaultmap=luca.map
 defaultcards=risk.cards
